[package]
name = "decengle-chain"
version = "0.1.0"
authors = ["Lawliet-Chan <Lawliet-Chan@github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "decengle-chain"
path = "src/main.rs"

[dependencies]
futures = "0.3.1"
futures01 = { package = "futures", version = "0.1.29" }
ctrlc = { version = "3.1.3", features = ["termination"] }
log = "0.4.8"
tokio = "0.1.22"
parking_lot = "0.9.0"
codec = { package = "parity-scale-codec", version = "1.0.0" }
trie-root = "0.15.2"
sp-io = { version = "2.0.0-alpha.4", git = "https://github.com/paritytech/substrate.git", rev = "653c89f6bb" }
sc-cli = { version = "2.0.0-alpha.4", git = "https://github.com/paritytech/substrate.git", rev = "653c89f6bb" }
sp-core = { version = "2.0.0-alpha.4", git = "https://github.com/paritytech/substrate.git", rev = "653c89f6bb" }
sc-executor = { version = "2.0.0-alpha.4", git = "https://github.com/paritytech/substrate.git", rev = "653c89f6bb" }
sc-service = { version = "2.0.0-alpha.4", git = "https://github.com/paritytech/substrate.git", rev = "653c89f6bb" }
sp-inherents = { version = "2.0.0-alpha.4", git = "https://github.com/paritytech/substrate.git", rev = "653c89f6bb" }
sc-transaction-pool = { version = "2.0.0-alpha.4", git = "https://github.com/paritytech/substrate.git", rev = "653c89f6bb" }
sp-transaction-pool = { version = "2.0.0-alpha.4", git = "https://github.com/paritytech/substrate.git", rev = "653c89f6bb" }
sc-network = { version = "0.8", git = "https://github.com/paritytech/substrate.git", rev = "653c89f6bb" }
sc-consensus-aura = { version = "0.8", git = "https://github.com/paritytech/substrate.git", rev = "653c89f6bb" }
sp-consensus-aura = { version = "0.8", git = "https://github.com/paritytech/substrate.git", rev = "653c89f6bb" }
sp-consensus = { version = "0.8", git = "https://github.com/paritytech/substrate.git", rev = "653c89f6bb" }
grandpa = { version = "2.0.0-alpha.4", package = "sc-finality-grandpa", git = "https://github.com/paritytech/substrate.git", rev = "653c89f6bb" }
grandpa-primitives = { version = "2.0.0-alpha.4", package = "sp-finality-grandpa", git = "https://github.com/paritytech/substrate.git", rev = "653c89f6bb" }
sc-client = { version = "2.0.0-alpha.4", git = "https://github.com/paritytech/substrate.git", rev = "653c89f6bb" }
node-template-runtime = { version = "2.0.0-alpha.4", path = "runtime" }
sp-runtime = { version = "2.0.0-alpha.4", git = "https://github.com/paritytech/substrate.git", rev = "653c89f6bb" }
sc-basic-authority = {git = "https://github.com/paritytech/substrate.git", rev = "653c89f6bb" }


[workspace]
members = []

[build-dependencies]
vergen = "3.0.4"
build-script-utils = { version = "2.0.0-alpha.4", package = "substrate-build-script-utils", git = "https://github.com/paritytech/substrate.git", rev = "653c89f6bb" }
