[package]
name = "runtime"
version = "0.1.0"
authors = ["Lawliet-Chan <Lawliet-Chan@github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aura = { version = "2.0.0-alpha.4", default-features = false, package = "pallet-aura", git = "https://github.com/paritytech/substrate.git", rev = "653c89f6bb" }
balances = { version = "2.0.0-alpha.4", default-features = false, package = "pallet-balances", git = "https://github.com/paritytech/substrate.git", rev = "653c89f6bb" }
frame-support = { version = "2.0.0-alpha.4", default-features = false, git = "https://github.com/paritytech/substrate.git", rev = "653c89f6bb" }
grandpa = { version = "2.0.0-alpha.4", default-features = false, package = "pallet-grandpa", git = "https://github.com/paritytech/substrate.git", rev = "653c89f6bb" }
indices = { version = "2.0.0-alpha.4", default-features = false, package = "pallet-indices", git = "https://github.com/paritytech/substrate.git", rev = "653c89f6bb" }
randomness-collective-flip = { version = "2.0.0-alpha.4", default-features = false, package = "pallet-randomness-collective-flip", git = "https://github.com/paritytech/substrate.git", rev = "653c89f6bb" }
sudo = { version = "2.0.0-alpha.4", default-features = false, package = "pallet-sudo", git = "https://github.com/paritytech/substrate.git", rev = "653c89f6bb" }
system = { version = "2.0.0-alpha.4", default-features = false, package = "frame-system", git = "https://github.com/paritytech/substrate.git", rev = "653c89f6bb" }
timestamp = { version = "2.0.0-alpha.4", default-features = false, package = "pallet-timestamp", git = "https://github.com/paritytech/substrate.git", rev = "653c89f6bb" }
transaction-payment = { version = "2.0.0-alpha.4", default-features = false, package = "pallet-transaction-payment", git = "https://github.com/paritytech/substrate.git", rev = "653c89f6bb" }
codec = { package = "parity-scale-codec", version = "1.0.0", default-features = false, features = ["derive"] }
frame-executive = { version = "2.0.0-alpha.4", default-features = false, git = "https://github.com/paritytech/substrate.git", rev = "653c89f6bb" }
safe-mix = { version = "1.0.0", default-features = false }
serde = { version = "1.0.101", optional = true, features = ["derive"] }
sp-api = { version = "2.0.0-alpha.4", default-features = false, git = "https://github.com/paritytech/substrate.git", rev = "653c89f6bb" }
sp-block-builder = { git = "https://github.com/paritytech/substrate.git", rev = "653c89f6bb", default-features = false}
sp-consensus-aura = { version = "0.8", default-features = false, git = "https://github.com/paritytech/substrate.git", rev = "653c89f6bb" }
sp-core = { version = "2.0.0-alpha.4", default-features = false, git = "https://github.com/paritytech/substrate.git", rev = "653c89f6bb" }
sp-inherents = { git = "https://github.com/paritytech/substrate.git", rev = "653c89f6bb", default-features = false}
sp-io = { version = "2.0.0-alpha.4", default-features = false, git = "https://github.com/paritytech/substrate.git", rev = "653c89f6bb" }
sp-offchain = { version = "2.0.0-alpha.4", default-features = false, git = "https://github.com/paritytech/substrate.git", rev = "653c89f6bb" }
sp-runtime = { version = "2.0.0-alpha.4", default-features = false, git = "https://github.com/paritytech/substrate.git", rev = "653c89f6bb" }
sp-session = { version = "2.0.0-alpha.4", default-features = false, git = "https://github.com/paritytech/substrate.git", rev = "653c89f6bb" }
sp-std = { version = "2.0.0-alpha.4", default-features = false, git = "https://github.com/paritytech/substrate.git", rev = "653c89f6bb" }
sp-transaction-pool = { version = "2.0.0-alpha.4", default-features = false, git = "https://github.com/paritytech/substrate.git", rev = "653c89f6bb" }
sp-version = { version = "2.0.0-alpha.4", default-features = false, git = "https://github.com/paritytech/substrate.git", rev = "653c89f6bb" }
keccak-hasher = "0.15.2"

[build-dependencies]
wasm-builder-runner = { version = "1.0.4", package = "substrate-wasm-builder-runner", git = "https://github.com/paritytech/substrate.git", rev = "653c89f6bb" }

[features]
default = ["std"]
std = [
	"aura/std",
	"balances/std",
	"codec/std",
	"frame-executive/std",
	"frame-support/std",
	"grandpa/std",
	"indices/std",
	"randomness-collective-flip/std",
	"safe-mix/std",
	"serde",
	"sp-api/std",
	"sp-block-builder/std",
	"sp-consensus-aura/std",
	"sp-core/std",
	"sp-inherents/std",
	"sp-io/std",
	"sp-offchain/std",
	"sp-runtime/std",
	"sp-session/std",
	"sp-std/std",
	"sp-transaction-pool/std",
	"sp-version/std",
	"sudo/std",
	"system/std",
	"timestamp/std",
	"transaction-payment/std",
	]